--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@
                 border: 1px solid rgba(209, 213, 219, 0.3);
             }
             body{
-                background-image: url('file:///C:/Users/Pradeep%20Narain%20Singh/Downloads/abstract-background-with-gradient-shapes_23-2148705497.jpg');
+                background-image: url('abstract-background-with-gradient-shapes_23-2148705497.jpg');
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
