--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                                         <div class="form-group">
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                         </div>
+                                        <div class="button">
+                                            <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
+                                        </div>
                                     </form>
                                 </div>
                             </div>
