--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                         </div>
                                         <div class="button">
-                                            <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
+                                            <input type="submit" name="" class="" value="View Spreadsheet" />
                                         </div>
                                     </form>
                                 </div>
