--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                         </div>
                                         <div class="button">
-                                            <input type="submit" name="" class="" value="View Spreadsheet" />
-                                        </div>
+                                            <a href="https://docs.google.com/spreadsheets/d/1v84sG9ujTxZ-TE2YWXERbu4brDJyf_dzpNFHrZNePJc/edit?usp=drivesdk"><class="btnSubmit btn-block" value="View Spreadsheet" />
+                                        </a></div>
                                     </form>
                                 </div>
                             </div>
