--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
                                         <div class="form-group">
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                         </div>
-                                        <div class="button">
-                                            <a href="https://docs.google.com/spreadsheets/d/1v84sG9ujTxZ-TE2YWXERbu4brDJyf_dzpNFHrZNePJc/edit?usp=drivesdk"><class="btnSubmit btn-block" value="View Spreadsheet" />
-                                        </a></div>
+                                        <div class="buttons">
+      <button>Website Owner - Prashant Raj</button>
+  
+    </div>
                                     </form>
                                 </div>
                             </div>
