--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
                                         <div class="form-group">
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                         </div>
-                                        <div class="buttons">
-      <button>Website Owner - Prashant Raj</button>
-  
-    </div>
-                                    </form>
+                                        
+     <a href="https://docs.google.com/spreadsheets/d/1v84sG9ujTxZ-TE2YWXERbu4brDJyf_dzpNFHrZNePJc/edit?usp=drivesdk"> <button>Website Owner f- Prashant Raj</button>
+                                   </a> </form>
                                 </div>
                             </div>
                         </div>
