--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                 color: rgb(246, 246, 252);
                 margin-top: 4%;
             }
+button
+            {
+                width: 50%;
+                border-radius: 1rem;
+                padding: 1.5%;
+                color: #fff;
+                background-color: #03612e;
+                border: none;
+                cursor: pointer;
+                margin-right: 6%;
+                color: rgb(246, 246, 252);
+                margin-top: 4%;
+            }
 
     </style>
 
