--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 margin-top: 4%;
             }
 button
-            {
+            {   
                 border-radius: 1rem;
                 padding: 1.5%;
                 color: #fff;
@@ -104,8 +104,9 @@ button
                                             <input type="submit" name="submit" class="btnSubmit btn-block" value="Add Details" />
                                       </div>
                                          </form>
-<a href="https://docs.google.com/spreadsheets/d/1v84sG9ujTxZ-TE2YWXERbu4brDJyf_dzpNFHrZNePJc/edit?usp=drivesdk"> <button>Website Owner h7f- Prashant Raj</button>
-                                   </a>
+<center><a href="https://docs.google.com/spreadsheets/d/1v84sG9ujTxZ-TE2YWXERbu4brDJyf_dzpNFHrZNePJc/edit?usp=drivesdk"> <button>View Spreedsheet 
+</button>
+                                   </a></center>
                                 </div>
                             </div>
                         </div>
